--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,20 @@
             </plugin>
 
         </plugins>
+             		<pluginManagement>
+	      <plugins>
+	              <plugin>
+	                      <groupId>org.apache.maven.plugins</groupId>
+	                      <artifactId>maven-deploy-plugin</artifactId>
+	                      <version>2.8.2</version>
+	              </plugin>
+	      </plugins>
+	    </pluginManagement>
     </build>
-
+       <distributionManagement>
+		<repository>
+			<id>chedly</id>
+			<url>http://172.10.0.140:8081/repository/maven-releases/</url>
+		</repository>
+	</distributionManagement>
 </project>
