--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     restart: unless-stopped
     environment:
       - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=tpachato
+      - MYSQL_DATABASE=achatdb
     ports:
       - 3306:3306
     volumes:
