--- a/pom.xml
+++ b/pom.xml
@@ -81,5 +81,10 @@
 
         </plugins>
     </build>
-
+<distributionManagement>
+		<repository>
+                  <id>deploymentRepo</id>			
+                  <url>http://http://192.168.1.5/:8081/repository/maven-releases/</url>
+		</repository>
+	</distributionManagement>
 </project>
