--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,13 @@
             </plugin>
 
         </plugins>
-    </build>
+    </build
+	<distributionManagement>
+		<repository>
+		<id>deploymentRepo</id>
+		<name>Nexus Repository</name>
+		<url>http://192.168.1.5:8081/repository/maven-releases/</url>
+		</repository>
+	</distributionManagement>
 	
 </project>
