--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
             </plugin>
 
         </plugins>
-    </build
+	</build>
 	<distributionManagement>
 		<repository>
 		<id>deploymentRepo</id>
