--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,15 @@
 
     </dependencies>
 
+  <distributionManagement>
+    <repository>
+    <id>deploymentRepo</id>
+    <name>Nexus Repository</name>
+    <url>http://192.168.0.26:8081/repository/maven-releases/</url>
+   
+    </repository>
+   
+    </distributionManagement>
     <build>
         <plugins>
             <plugin>
