--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,19 @@
-version: "3.4"
+version : "3.3"
 
 services:
-  mysql-containerFinal1:
-    container_name: mysql-containerFinal1
-    ports:
-      - '3306:3306'
-    environment:
-      - MYSQL_DATABASE=1
-      - MYSQL_ALLOW_EMPTY_PASSWORD=1
-    restart: always
-    volumes:
-      - mysql-containerFinal1:/var/lib/mysql:rw
-    image: 'mysql:latest'
-  dockerfile_springFinal1:
-    depends_on:
-      - mysql-containerFinal1
-    container_name: dockerfile_springFinal1
-    ports:
-      - '8089:8089'
-    image: abdessalem007/spring:2.2.4
+ mysqldb:
+  container_name: mysqldb1
+  image: mysql:8
+  restart: unless-stopped
+  environment:
+   MYSQL_ROOT_PASSWORD: root
+  volumes:
+    - /home/mysqldata:/var/lib/mysql
+ spring_app:
+  image: abdessalem007/spring
+  container_name: spring-container
+  restart: on-failure
+  ports:
+   - 8089:8089
+  depends_on:     
+   - mysqldb
