--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
 <repository>
 <id>deploymentRepo</id>
 <name>Nexus Repository</name>
-<url>http://192.168.1.5:8081/#browse/browse:maven-releases</url>
+<url>http://192.168.1.5:8081/repository/maven-releases/</url>
 </repository>
 </distributionManagement>
 
