--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,9 @@ services:
     container_name: springboot_container
     ports:
       - 8089:8089
+    build:
+      context: .
+      dockerfile: Dockerfile
     volumes:
       - .m2:/root/.m2
     stdin_open: true
